# neoantigen-prefect

./: .env.example  .gitignore  README.md  blog_post_draft.md  config.py  neoantigen_flow.py  pipeline_dag.mmd  pyproject.toml  run_147771.sh  run_flow.py  run_patient.py  seqera_client.py  serve_flow.py  tasks.py
.seqera/: Dockerfile  config.py  environment.yaml  neoantigen_flow.py  seqera_client.py  serve_flow.py  studio-config.yaml  tasks.py
.seqera/samplesheets/: PID262622_hlatyping.csv  PID262622_rnaseq.csv
analysis/: PID262622_ORIGINATOR_validation.md
samplesheets/: PID147771_hlatyping.csv  PID147771_rnaseq.csv  PID147771_wes.csv  PID262622_hlatyping.csv  PID262622_rnaseq.csv  PID262622_wes.csv  all_samplesheets.txt
tests/: conftest.py  test_client.py  test_config.py  test_tasks.py
