[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoantigen-prefect"
version = "0.1.0"
description = "Prefect orchestration for neoantigen prediction via Seqera Platform"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "boto3>=1.34",          # for S3 samplesheet staging (optional, used by helpers)
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.scripts]
run-neoantigen = "run_flow:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
